# url_shortener

./: '  .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.toml  dbinit.sql
html/: 404.html  index.css  index.html  login.css  login.html  navbar.css  navbar.html
migrations/: 0001_shortener.sql
src/: auth.rs  db.rs  form_verification.rs  main.rs  preferences.rs  url_db.rs  user.rs
src/user/: jwt.rs  jwt.rs.orig
templates/: url-table-row.html
