[package]
name = "url_shortner"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.5"
base64 = "0.22.1"
hex = "0.4.3"
hex-literal = "0.4.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.6"
serde = "1.0.209"
sha2 = { version = "0.10.8", features = ["asm", "sha2-asm"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zeroize = "1.8.1"

[env]
RUST_TEST_THREADS = "1"
