[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.5" }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.22.1"
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.6"
serde = "1.0.209"
serde_html_form = "0.2.6"
serde_json = "1.0.133"
sha2 = { version = "0.10.8", features = ["asm", "sha2-asm"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zeroize = "1.8.1"

[dev-dependencies]
axum = { version = "0.7.5", features = ["macros"] }
